--- a/Mill7i85s/graphViz/Estop.dox
+++ b/Mill7i85s/graphViz/Estop.dox
@@ -193,6 +193,36 @@
                     
                     </TABLE>
                 >]
+                estop6 [shape="box" label=<
+                    <TABLE>
+                        <TR> 
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                   <TR><TD ALIGN="LEFT" port="i0">fault-in</TD></TR>
+                                   <TR><TD ALIGN="LEFT" port="i1">ok-in</TD></TR>
+                                </TABLE>
+                            </TD>
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                    <TR><TD ALIGN="RIGHT" port="o0">fault-out</TD></TR> 
+                                    <TR><TD ALIGN="RIGHT" port="o1">ok-out</TD></TR> 
+                                    <TR><TD ALIGN="RIGHT" port="o2">watchdog</TD></TR> 
+                                </TABLE>
+                            </TD>
+                        </TR> 
+                        
+                        <TR>
+                            <TD COLSPAN="2">
+                            <TABLE CELLBORDER="0" BORDER="0">
+                                <TR >
+                                    <TD port="f0">reset</TD>
+                                </TR>
+                            </TABLE>
+                            </TD>
+                        </TR>
+                    
+                    </TABLE>
+                >]
             }
 
             subgraph cluster_hm{
@@ -202,8 +232,9 @@
                         <TR> 
                             <TD>
                                 <TABLE CELLBORDER="0" BORDER="0">
-                                   <TR><TD ALIGN="LEFT" port="i0">gpio.029.in_not</TD></TR>
-                                   <TR><TD ALIGN="LEFT" port="i1">gpio.025.in</TD></TR>
+                                   <TR><TD ALIGN="LEFT" port="io12">IO12 gpio.029.in_not</TD></TR>
+                                   <TR><TD ALIGN="LEFT" port="io8">IO8 gpio.025.in</TD></TR>
+                                   <TR><TD ALIGN="LEFT" port="io14">IO14 gpio.031.in</TD></TR>
                                 </TABLE>
                             </TD>
                         </TR> 
@@ -244,10 +275,10 @@
                 >]
             }
 
+            gpio:io12 -> estop0:i0:w [label="driver-estop"            fontcolor="red" color="red"];
+            gpio:io8  -> estop1:i0:w [label="length-overtravel-estop" fontcolor="red" color="red"];
+            gpio:io14 -> estop6:i0:w [label="VFD-estop"               fontcolor="red" color="red"];
 
-
-            gpio:i0 -> estop0:i0:w [label="driver-estop"      fontcolor="red" color="red"];
-            gpio:i1 -> estop1:i0:w [label="length-overtravel-estop" fontcolor="red" color="red"];
             encoder:o0 -> estop2:i0:w [label="x-encoder-estop" fontcolor="red" color="red"];
             encoder:o1 -> estop3:i0:w [label="y-encoder-estop" fontcolor="red" color="red"];
             encoder:o2 -> estop4:i0:w [label="z-encoder-estop" fontcolor="red" color="red"];
@@ -258,15 +289,17 @@
             estop2:o1 -> estop3:i1 [label="latch2-out" fontsize = "10" ];
             estop3:o1 -> estop4:i1 [label="latch3-out" fontsize = "10" ];
             estop4:o1 -> estop5:i1 [label="latch4-out" fontsize = "10" ];
-            estop5:o1:w -> iocontrol:i0 [label="estop-out"];
+            estop5:o1 -> estop6:i1 [label="latch5-out" fontsize = "10" ];
+            estop6:o1:w -> iocontrol:i0 [label="estop-out"];
 
             iocontrol:o0  -> estop0:i1 [label="latch0-ok-in" fontsize = "10" fontcolor="black" color="black"];
-            iocontrol:o1 -> estop0:f0:s -> estop1:f0 -> estop2:f0 -> estop3:f0 -> estop4:f0 -> estop5:f0 [label="latch-reset" fontsize = "10" fontcolor="blue" color="blue"];
+            iocontrol:o1 -> estop0:f0:s -> estop1:f0 -> estop2:f0 -> estop3:f0 -> estop4:f0 -> estop5:f0 -> estop6:f0 [label="latch-reset" fontsize = "10" fontcolor="blue" color="blue"];
         }
     \enddot    
 */
 /*
             iocontrol -> estop0 -> gpio [type=invis weight=10];
 
+net G540-fault      <= parport.0.pin-15-in
 
 */
