Clean up the y axis. Still need final proposed stepgen changes applied to all three axis. Change the y tuning. EStop needs mesa fix for encoder, but this runs.

--- a/Mill7i85s/graphViz/Estop.dox
+++ b/Mill7i85s/graphViz/Estop.dox
@@ -4,6 +4,7 @@
     \addtogroup EStopLatch
 
     This diagram illustrates the .hal components for the estop latch logic of my mill.
+    I moved encoder quadrature errors to joint/spindle amp-fault-in since they are not really recoverable.
 
     \dot
         digraph structs {
@@ -103,128 +104,7 @@
                     
                     </TABLE>
                 >]
-                estop3 [shape="box" label=<
-                    <TABLE>
-                        <TR> 
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                   <TR><TD ALIGN="LEFT" port="i0">fault-in</TD></TR>
-                                   <TR><TD ALIGN="LEFT" port="i1">ok-in</TD></TR>
-                                </TABLE>
-                            </TD>
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                    <TR><TD ALIGN="RIGHT" port="o0">fault-out</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o1">ok-out</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o2">watchdog</TD></TR> 
-                                </TABLE>
-                            </TD>
-                        </TR> 
-                        
-                        <TR>
-                            <TD COLSPAN="2">
-                            <TABLE CELLBORDER="0" BORDER="0">
-                                <TR >
-                                    <TD port="f0">reset</TD>
-                                </TR>
-                            </TABLE>
-                            </TD>
-                        </TR>
-                    
-                    </TABLE>
-                >]
-                estop4 [shape="box" label=<
-                    <TABLE>
-                        <TR> 
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                   <TR><TD ALIGN="LEFT" port="i0">fault-in</TD></TR>
-                                   <TR><TD ALIGN="LEFT" port="i1">ok-in</TD></TR>
-                                </TABLE>
-                            </TD>
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                    <TR><TD ALIGN="RIGHT" port="o0">fault-out</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o1">ok-out</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o2">watchdog</TD></TR> 
-                                </TABLE>
-                            </TD>
-                        </TR> 
-                        
-                        <TR>
-                            <TD COLSPAN="2">
-                            <TABLE CELLBORDER="0" BORDER="0">
-                                <TR >
-                                    <TD port="f0">reset</TD>
-                                </TR>
-                            </TABLE>
-                            </TD>
-                        </TR>
-                    
-                    </TABLE>
-                >]
-                estop5 [shape="box" label=<
-                    <TABLE>
-                        <TR> 
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                   <TR><TD ALIGN="LEFT" port="i0">fault-in</TD></TR>
-                                   <TR><TD ALIGN="LEFT" port="i1">ok-in</TD></TR>
-                                </TABLE>
-                            </TD>
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                    <TR><TD ALIGN="RIGHT" port="o0">fault-out</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o1">ok-out</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o2">watchdog</TD></TR> 
-                                </TABLE>
-                            </TD>
-                        </TR> 
-                        
-                        <TR>
-                            <TD COLSPAN="2">
-                            <TABLE CELLBORDER="0" BORDER="0">
-                                <TR >
-                                    <TD port="f0">reset</TD>
-                                </TR>
-                            </TABLE>
-                            </TD>
-                        </TR>
-                    
-                    </TABLE>
-                >]
-                estop6 [shape="box" label=<
-                    <TABLE>
-                        <TR> 
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                   <TR><TD ALIGN="LEFT" port="i0">fault-in</TD></TR>
-                                   <TR><TD ALIGN="LEFT" port="i1">ok-in</TD></TR>
-                                </TABLE>
-                            </TD>
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                    <TR><TD ALIGN="RIGHT" port="o0">fault-out</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o1">ok-out</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o2">watchdog</TD></TR> 
-                                </TABLE>
-                            </TD>
-                        </TR> 
-                        
-                        <TR>
-                            <TD COLSPAN="2">
-                            <TABLE CELLBORDER="0" BORDER="0">
-                                <TR >
-                                    <TD port="f0">reset</TD>
-                                </TR>
-                            </TABLE>
-                            </TD>
-                        </TR>
-                    
-                    </TABLE>
-                >]
             }
-
             subgraph cluster_hm{
                 label="hm"
                 gpio [shape="box" label=<
@@ -245,10 +125,14 @@
                         <TR> 
                             <TD>
                                 <TABLE CELLBORDER="0" BORDER="0">
-                                    <TR><TD ALIGN="RIGHT" port="o0">00.quad-error</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o1">01.quad-error</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o2">02.quad-error</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o3">03.quad-error</TD></TR> 
+                                    <TR><TD ALIGN="LEFT" port="o0">00.quad-error</TD></TR> 
+                                    <TR><TD ALIGN="LEFT" port="i0">00.quad-error-enable</TD></TR> 
+                                    <TR><TD ALIGN="LEFT" port="o1">01.quad-error</TD></TR> 
+                                    <TR><TD ALIGN="LEFT" port="i1">01.quad-error-enable</TD></TR> 
+                                    <TR><TD ALIGN="LEFT" port="o2">02.quad-error</TD></TR> 
+                                    <TR><TD ALIGN="LEFT" port="i2">02.quad-error-enable</TD></TR> 
+                                    <TR><TD ALIGN="LEFT" port="o3">03.quad-error</TD></TR> 
+                                    <TR><TD ALIGN="LEFT" port="i3">03.quad-error-enable</TD></TR> 
                                 </TABLE>
                             </TD>
                         </TR> 
@@ -275,31 +159,27 @@
                 >]
             }
 
-            gpio:io12 -> estop0:i0:w [label="driver-estop"            fontcolor="red" color="red"];
-            gpio:io8  -> estop1:i0:w [label="length-overtravel-estop" fontcolor="red" color="red"];
-            gpio:io14 -> estop6:i0:w [label="VFD-estop"               fontcolor="red" color="red"];
+            gpio:io12 -> estop0:i0:w [label="estop-driver"            fontcolor="red" color="red"];
+            gpio:io8  -> estop1:i0:w [label="estop-overtravel"        fontcolor="red" color="red"];
+            gpio:io14 -> estop2:i0:w [label="estop-VFD"               fontcolor="red" color="red"];
 
-            encoder:o0 -> estop2:i0:w [label="x-encoder-estop" fontcolor="red" color="red"];
-            encoder:o1 -> estop3:i0:w [label="y-encoder-estop" fontcolor="red" color="red"];
-            encoder:o2 -> estop4:i0:w [label="z-encoder-estop" fontcolor="red" color="red"];
-            encoder:o3 -> estop5:i0:w [label="s-encoder-estop" fontcolor="red" color="red"];
+            encoder:o0 -> joint0amp_fault_in [label="estop-x-encoder" fontcolor="red" color="red"];
+            encoder:o1 -> joint1amp_fault_in [label="estop-y-encoder" fontcolor="red" color="red"];
+            encoder:o2 -> joint2amp_fault_in [label="estop-z-encoder" fontcolor="red" color="red"];
+            encoder:o3 -> spindle0amp_fault_in [label="estop-s-encoder" fontcolor="red" color="red"];
 
             estop0:o1 -> estop1:i1 [label="latch0-out" fontsize = "10" ];
             estop1:o1 -> estop2:i1 [label="latch1-out" fontsize = "10" ];
-            estop2:o1 -> estop3:i1 [label="latch2-out" fontsize = "10" ];
-            estop3:o1 -> estop4:i1 [label="latch3-out" fontsize = "10" ];
-            estop4:o1 -> estop5:i1 [label="latch4-out" fontsize = "10" ];
-            estop5:o1 -> estop6:i1 [label="latch5-out" fontsize = "10" ];
-            estop6:o1:w -> iocontrol:i0 [label="estop-out"];
+            estop2:o1 -> iocontrol:i0 [label="estop-out"];
 
-            iocontrol:o0  -> estop0:i1 [label="latch0-ok-in" fontsize = "10" fontcolor="black" color="black"];
-            iocontrol:o1 -> estop0:f0:s -> estop1:f0 -> estop2:f0 -> estop3:f0 -> estop4:f0 -> estop5:f0 -> estop6:f0 [label="latch-reset" fontsize = "10" fontcolor="blue" color="blue"];
+            iocontrol:o0:e  -> estop0:i1 [label="latch0-ok-in" fontsize = "10" fontcolor="black" color="black"];
+
+            iocontrol:o1:e  -> encoder:i0:e  -> encoder:i1:e  -> encoder:i2:e  -> encoder:i3:e  [label="latch-reset" fontsize = "10" fontcolor="blue" color="blue"];
+            iocontrol:o1 -> estop0:f0:s -> estop1:f0 -> estop2:f0                               [label="latch-reset" fontsize = "10" fontcolor="blue" color="blue"];
         }
     \enddot    
 */
 /*
-            iocontrol -> estop0 -> gpio [type=invis weight=10];
-
-net G540-fault      <= parport.0.pin-15-in
-
+            iocontrol:o0:e  -> encoder:i0  [label="" fontsize = "10" fontcolor="black" color="black"];
+            iocontrol:o0:e  -> encoder:i2  [label="" fontsize = "10" fontcolor="black" color="black"];
 */
