--- a/Mill7i85s/graphViz/mainPage.dox
+++ b/Mill7i85s/graphViz/mainPage.dox
@@ -4,7 +4,7 @@
         
         Having this in a separate file allows the documentation to be updated without changing a code file.
                 
-        \mainpage Rockwell Mill documentation
+        \mainpage LinuxCNC Rockwell Mill documentation
                         
         \section features_section Features
                 
